Fixed table h1 spacing

--- a/css/style.scss
+++ b/css/style.scss
@@ -288,6 +288,7 @@ main {
       padding-bottom: 2*$lh;
       h1 {
         margin: 0;
+        padding: 0;
       }
       p {
         margin-bottom: 0;
